solve overflow and btn icon update

--- a/css/questionroom.css
+++ b/css/questionroom.css
@@ -25,7 +25,7 @@
 	border:0;
 	background-color: rgba(0%,0%,0%,0);
 	color: #777;
-	font-size: 130%;
+	font-size: 180%;
 }
 .btn-no-outline:focus{
 	outline: none !important;
@@ -36,7 +36,7 @@
 	height:30px; 
 	background-color:#327AC0; 
 	color: #FFF; 
-	border:0
+	border:0;
 }
 .questionBlock{
 	position:relative; 
